@@ -13,7 +13,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tcl.h,v 1.153 2003/02/15 02:16:29 hobbs Exp $
+ * RCS: @(#) $Id: tcl.h,v 1.153.2.1 2003/03/12 19:19:29 dgp Exp $
  */
 
 #ifndef _TCL
@@ -60,9 +60,6 @@ extern "C" {
 #define TCL_MINOR_VERSION   4
 #define TCL_RELEASE_LEVEL   TCL_FINAL_RELEASE
 #define TCL_RELEASE_SERIAL  2
-
-#define TCL_PREFIX_IDENT ""
-#define TCL_DEBUG_IDENT TCL_DBGX
 
 #define TCL_VERSION	    "8.4"
 #define TCL_PATCH_LEVEL	    "8.4.2"
