@@ -1,5 +1,9 @@
 2003-03-12  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tcl.h:	Removed TCL_PREFIX_IDENT and TCL_DEBUG_IDENT
+	* win/tclWinPipe.c:	from tcl.h -- they are not part of Tcl's
+	public interface.  Put them in win/tclWinPipe.c where they are used.
+
 	* generic/tclCmdMZ.c (Tcl_SubstObj):	Corrected and added test for
 	* tests/subst.test (subst-2.4):		Tcl_SubstObj's incorrect
 	halting of substitution at the first \x00 byte.  [Bug 685106]
